--- a/sales_analytics.ipynb
+++ b/sales_analytics.ipynb
@@ -359,7 +359,7 @@
     "\"\"\"\n",
     "# Sales Analytics Guided Notebook\n",
     "\n",
-    "This guided notebook will walk you through the process of performing sales analytics, from data loading to insights generation.\n",
+    "This guided notebook will walk you through the process of performing sales analytics using the code above, from data loading to insights generation.\n",
     "\n",
     "## Sections:\n",
     "1. Loading and Understanding the Dataset\n",
@@ -525,7 +525,6 @@
     "print(df.describe())\n",
     "\n",
     "df.describe() generates summary statistics for numerical columns (e.g., mean, min, max, standard deviation).\n",
-    "\n",
     "\n",
     "5. Ensuring Column Names Are Correct\n",
     "\n",
